# soxy

./: Makefile  README.md  big_picture.drawio
.github/workflows/: build.yml  clippy.yml
backend/: Cargo.toml
backend/src/: lib.rs
backend/src/svc/: mod.rs
backend/src/vc/: mod.rs
backend/src/vc/dvc/: mod.rs  wts.rs  xrdp.rs
backend/src/vc/svc/: high.rs  high_linux.rs  high_windows.rs  low.rs  mod.rs
common/: Cargo.toml
common/src/: api.rs  channel.rs  frontend.rs  lib.rs  log.rs  rdp.rs  service.rs  util.rs
common/src/clipboard/: backend.rs  frontend.rs  mod.rs  protocol.rs
common/src/command/: backend.rs  frontend.rs  mod.rs
common/src/forward/: backend.rs  frontend.rs  mod.rs  protocol.rs
common/src/ftp/: backend.rs  frontend.rs  mod.rs  protocol.rs
common/src/input/: frontend.rs  mod.rs
common/src/socks5/: backend.rs  frontend.rs  mod.rs  protocol.rs
common/src/stage0/: frontend.rs  mod.rs
frontend/: Cargo.toml  build.rs
frontend/src/: config.rs  control.rs  lib.rs
frontend/src/client/: mod.rs
frontend/src/client/citrix/: headers.rs  mod.rs
frontend/src/client/freerdp/: headers.h  headers.rs  mod.rs
frontend/src/client/x11/: headers.rs  mod.rs
frontend/src/vc/: mod.rs
frontend/src/vc/dvc/: mod.rs  wts.rs
frontend/src/vc/dvc/freerdp/: headers.h  headers.rs  mod.rs
frontend/src/vc/svc/: mod.rs  semaphore.rs
frontend/src/vc/svc/citrix/: headers.h  headers.rs  mod.rs  vd.rs
frontend/src/vc/svc/rdp/: headers.h  headers.rs  mod.rs
soxyreg/: Cargo.toml
soxyreg/src/: dvc.rs  lib.rs  main.rs  svc.rs
standalone/: Cargo.toml
tools/stage0/: stage0.ps1
win7-rustc/: Makefile
