[package]
name = "common"
version = "4.3.2"
edition = "2024"
authors = ["Airbus Seclab <seclab+soxy@airbus.com>"]
repository = "https://github.com/airbus-seclab/soxy"
license-file = "../LICENSE"

[dependencies]
copyrs = { version = "0", default-features = false }
crossbeam-channel = "0"
log = { version = "0", optional = true }
network-interface = "2"
simplelog = { version = "0", optional = true }

[lints.clippy]
pedantic = { level = "deny", priority = -1 }
must_use_candidate = "allow"
enum-glob-use = "allow"
missing-errors-doc = "allow"

[features]
log = [ "dep:log", "dep:simplelog" ]
backend = [ "copyrs/x11" ]
frontend = [ ]
service-clipboard = [ ]
service-command = [ ]
service-ftp = [ ]
service-input = [ ]
service-socks5 = [ ]
service-stage0 = [ ]
