[package]
name = "frontend"
version = "4.3.1"
edition = "2024"
authors = ["Airbus Seclab <seclab+soxy@airbus.com>"]
repository = "https://github.com/airbus-seclab/soxy"
license-file = "../LICENSE"

[dependencies]
common = { path = "../common", features = [ "frontend" ] }
crossbeam-channel = "0"
dirs = "6"
libloading = "0"
log = { version = "0", optional = true }
serde = { version = "1", default-features = false, features = [ "derive", "std" ] }
toml = { version = "0", default-features = false, features = [ "display", "parse", "serde" ] }

[target.'cfg(windows)'.dependencies]
soxyreg = { path = "../soxyreg", optional = true }
windows = { version = "0", features = [
"Win32_System_Com",
"Win32_System_Console",
"Win32_System_RemoteDesktop",
] }
windows-core = { version = "0", optional = true }
windows-implement = { version = "0", optional = true }

[build-dependencies]
bindgen = "0"

[lints.clippy]
pedantic = { level = "deny", priority = -1 }
must_use_candidate = "allow"
enum-glob-use = "allow"
missing-errors-doc = "allow"

[lib]
crate-type = [ "cdylib", "rlib" ]
name = "soxy"

[profile.release]
opt-level = 3
debug = false
strip = true
lto = true
panic = "abort"
codegen-units = 1

[features]
log = [ "common/log", "dep:log" ]
service-clipboard = [ "common/service-clipboard" ]
service-command = [ "common/service-command" ]
service-ftp = [ "common/service-ftp" ]
service-input = [ "common/service-input" ]
service-socks5 = [ "common/service-socks5" ]
service-stage0 = [ "common/service-stage0" ]
dvc = [ "dep:soxyreg", "dep:windows-core", "dep:windows-implement" ]
svc = [ ]
