[package]
name = "soxyreg"
version = "4.7.0"
edition = "2024"
authors = ["Airbus Seclab <seclab+soxy@airbus.com>"]
repository = "https://github.com/airbus-seclab/soxy"
license-file = "../LICENSE"

[dependencies]
clap = { version = "4", features = ["derive"] }
winreg = "0"

[lints.clippy]
pedantic = { level = "deny", priority = -1 }
must_use_candidate = "allow"
enum-glob-use = "allow"
missing-errors-doc = "allow"
nursery = { level = "deny", priority = -1 }
or_fun_call = "allow"
significant_drop_tightening = "allow"

[profile.release]
opt-level = "s"
debug = false
strip = true
lto = true
panic = "abort"
codegen-units = 1
