[package]
name = "standalone"
version = "4.5.0"
edition = "2024"
authors = ["Airbus Seclab <seclab+soxy@airbus.com>"]
repository = "https://github.com/airbus-seclab/soxy"
license-file = "../LICENSE"

[dependencies]
frontend = { path = "../frontend" }
common = { path = "../common", features = [ "backend", "frontend" ] }
crossbeam-channel = "0"
log = { version = "0", optional = true }

[lints.clippy]
pedantic = { level = "deny", priority = -1 }
must_use_candidate = "allow"
enum-glob-use = "allow"
missing-errors-doc = "allow"

[profile.release]
opt-level = 3
debug = false
strip = true
lto = true
panic = "abort"

[[bin]]
name = "soxy_standalone"
path = "src/bin/standalone.rs"

[features]
log = [ "dep:log", "common/log", "frontend/log" ]
service-clipboard = [ "frontend/service-clipboard" ]
service-command = [ "frontend/service-command" ]
service-forward = [ "frontend/service-forward" ]
service-ftp = [ "frontend/service-ftp" ]
service-input = [ "frontend/service-input" ]
service-socks5 = [ "frontend/service-socks5" ]
service-stage0 = [ "frontend/service-stage0" ]
